Tue Nov 17 00:06:34 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (deliver): MTA is now in the site config.

Mon Nov 16 15:40:58 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_subject_prefix): New function; isolate
 	subject prefix manipulation.
	(_post): Call it.

	* lib/Mj/Format.pm (which): Clean up returned message.

	* lib/Majordomo.pm (which): Now takes general pattern.

	* lib/Mj/Config.pm (parse_taboo_body): Call compile_pattern to get
 	generic pattern support and error checking.  Make sure uncompiled
 	pattern is displayed in bounce message.
	(parse_taboo_headers): Ditto.
	(_compile_rule): Fail when parsing the pattern if $ok is false,
 	not if $err is true.

	* lib/Majordomo.pm (list_config_set): Pretty up error message.

	* lib/Mj/Config.pm (_compile_rule): Call compile_pattern to check
 	the regexp.  Accept both supported delimiters, and pattern
 	modifiers.

Sat Nov 14 15:54:59 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_delivery_rules): Allow generalized
 	patterns in address matchers.

	* lib/Mj/List.pm: Some general removal of old single-directory
 	stuff.

	* lib/Mj/SimpleDB/Text.pm (lookup_quick_regexp): Restructure; take
 	an additional flag: if ew got a hit but the regexp didn't match
 	the key then write the match back.

	* lib/Mj/SimpleDB/Base.pm (lookup_regexp): Pass that flag on.

	* lib/Mj/SimpleDB/Text.pm (remove): Pass a special flag to make
 	lookup_quick_regexp write back false matches.

	* lib/Majordomo.pm (_auxremove): Return the stripped address,
 	since that's the only thing we stored.

Fri Nov 13 01:03:17 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (who_start): Only parse the regexp if one was
 	given.
	(unsubscribe): Rewrite to properly parse addresses and general
 	patterns.
	(auxremove): Rewrite to mirror unsubscribe.  Now includes access
 	checking.
